--- a/style/style.css
+++ b/style/style.css
@@ -12067,13 +12067,32 @@ body {
   padding-top: 65px;
 }
 
+.index-bg {
+  background: url(../Image/idx-bg.jpg) center center no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 90vh;
+  position: relative;
+}
+.index-bg .index-bg-img {
+  max-width: 50%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-41%, -37%);
+}
+.index-bg .index-btn-group {
+  display: none;
+}
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.336);
 }
 
 .navbar-toggler:hover {
   border: 1px solid rgba(0, 0, 0, 0.486);
-  transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in-out;
 }
 
 .offcanvas-title {
@@ -12254,6 +12273,29 @@ footer.footer ul li a {
 }
 
 @media (max-width: 575.98px) {
+  .index-bg {
+    background-image: url(../Image/hero-idx-mobile@2x.png);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+  }
+  .index-bg .index-bg-img {
+    display: none;
+  }
+  .index-bg .index-btn-group {
+    width: 80px;
+    height: 80px;
+    line-height: 18vw;
+    color: #b18f6e;
+    position: absolute;
+    display: block;
+    border: 1px solid #b18f6e;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 15px;
+    font-family: "American Typewriter";
+  }
   div.news-card {
     margin-top: 20px;
     width: 70%;
@@ -12353,6 +12395,31 @@ footer.footer ul li a {
   }
 }
 @media (max-width: 991.98px) {
+  .index-bg {
+    background-image: url(../Image/hero-idx-mobile@2x.png);
+    background-size: 60%;
+    background-position: center top;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+  }
+  .index-bg .index-bg-img {
+    display: none;
+  }
+  .index-bg .index-btn-group {
+    width: 120px;
+    height: 120px;
+    line-height: 14vw;
+    color: #b18f6e;
+    position: absolute;
+    display: block;
+    border: 1px solid #b18f6e;
+    border-radius: 100px;
+    text-align: center;
+    font-size: 20px;
+    font-family: "American Typewriter";
+  }
   div.news-card {
     margin-top: 20px;
     width: 70%;
