--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,4 @@
-@import "../style/scss/bootstrap.scss";
+// @import "../style/scss/bootstrap.scss";
 * {
   padding: 0;
   margin: 0;
@@ -52,7 +52,10 @@ body {
     display: none;
   }
 }
-
+.offcanvas-title-style {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
 .navbar {
   background-color: rgba(255, 255, 255, 0.336);
 }
@@ -73,7 +76,7 @@ body {
   }
 }
 .nav-link:hover {
-  color: rgb(110, 117, 117);
+  color: rgb(197, 161, 42);
 }
 // -------------------------------------
 div.btn-container {
@@ -228,6 +231,9 @@ div.news-card {
       max-width: 80%;
     }
   }
+  .ifram {
+    display: none;
+  }
 }
 //----------------footer--------------
 footer.footer {
@@ -254,155 +260,13 @@ footer.footer {
   color: rgb(170, 119, 23);
   transition: 0.3s;
 }
-//--------------------------------------------
 
-// X-Small devices (portrait phones, less than 576px)
-@media (max-width: 575.98px) {
-  .index-bg {
-    background-image: url(../Image/hero-idx-mobile@2x.png);
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    .index-bg-img {
-      display: none;
-    }
-    .index-btn-group {
-      width: 80px;
-      height: 80px;
-      line-height: 18vw;
-      color: #b18f6e;
-      position: absolute;
-      display: block;
-      border: 1px solid #b18f6e;
-      border-radius: 50px;
-      text-align: center;
-      font-size: 15px;
-      font-family: "American Typewriter";
-    }
-  }
-  div.news-card {
-    // border: 2px solid black;
-    margin-top: 20px;
-    width: 70%;
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    // margin: 20px 10px;
-    a.bg-item {
-      border: 1px solid rgba(155, 155, 153, 0.555);
-      background-color: rgba(193, 212, 228, 0.349);
-      width: 100%;
-      // margin: 5px;
-      color: rgb(97, 94, 93);
-
-      img {
-        // border: 2px solid red;
-        width: 100%;
-      }
-      p {
-        margin-top: 20px;
-        text-align: center;
-      }
-    }
-  }
-  .about-bg-img {
-    min-height: 20vh;
-  }
-  .about-link-group {
-    // border: 2px solid blue;
-    ul {
-      // border: 2px solid red;
-      width: 80%;
-      margin: 0 auto;
-      li {
-        margin: 10px 5px;
-      }
-      .about-link {
-        font-size: 1rem;
-        padding: 8px 10px;
-      }
-    }
-  }
-  .about-container {
-    // border: 2px solid black;
-    margin: 0 10px;
-    .top-group {
-      // border: 2px solid blue;
-      display: flex;
-      flex-wrap: wrap;
-      .left-img {
-        img {
-          max-width: 100%;
-        }
-      }
-      .right-group {
-        // border: 2px solid red;
-        width: 100%;
-        margin: 10px 0;
-        .right-title {
-          font-size: 2rem;
-          margin: 15px 10px;
-          color: rgb(153, 105, 42);
-        }
-        .right-text {
-          // border: 2px solid seagreen;
-          width: 100%;
-          margin: 0;
-        }
-        img {
-          max-width: 100%;
-          margin: 15px 0;
-        }
-      }
-    }
-    .bottom-group {
-      // border: 2px solid yellow;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      .bottom-text {
-        // border: 2px solid hotpink;
-        width: 100%;
-        margin: 10px 0;
-        text-align: justify;
-        line-height: 1.5;
-        letter-spacing: 1px;
-      }
-    }
-  }
-  footer.footer {
-    margin-top: 20px;
-    background-color: rgba(145, 133, 111, 0.616);
-    padding: 10;
-    height: auto;
-    ul {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      li {
-        padding: 10px 10px;
-        a {
-          color: aliceblue;
-          margin: 0 8px;
-          letter-spacing: 2px;
-        }
-      }
-    }
-  }
-  .foot a:hover {
-    color: rgb(170, 119, 23);
-    transition: 0.3s;
-  }
+// `xxl` applies to x-large devices (large desktops, less than 1400px)
+@media (max-width: 1399.98px) {
 }
 
-// Small devices (landscape phones, less than 768px)
-@media (max-width: 767.98px) {
-}
-
-// Medium devices (tablets, less than 992px)
-@media (max-width: 991.98px) {
+// `xl` applies to large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {
   .index-bg {
     background-image: url(../Image/hero-idx-mobile@2x.png);
     background-size: 60%;
@@ -415,15 +279,17 @@ footer.footer {
       display: none;
     }
     .index-btn-group {
-      width: 120px;
-      height: 120px;
-      line-height: 14vw;
+      // border: 2px solid black;
+      width: 100px;
+      height: 100px;
+      line-height: 12vw;
       color: #b18f6e;
       position: absolute;
       display: block;
       border: 1px solid #b18f6e;
       border-radius: 100px;
       text-align: center;
+      margin-bottom: 60px;
       font-size: 20px;
       font-family: "American Typewriter";
     }
@@ -499,7 +365,7 @@ footer.footer {
         }
         img {
           max-width: 100%;
-          margin: 15px 0px;
+          margin: 15px 0px 15px 20px;
         }
       }
     }
@@ -516,6 +382,179 @@ footer.footer {
         line-height: 1.5;
         letter-spacing: 1px;
       }
+    }
+  }
+  .about-map {
+    // border: 2px solid orange;
+    margin-top: 20px;
+    a {
+      display: none;
+    }
+    .ifram {
+      display: block;
+      width: 100%;
+    }
+  }
+  footer.footer {
+    margin-top: 20px;
+    background-color: rgba(145, 133, 111, 0.616);
+    padding: 60px;
+    height: auto;
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      li {
+        padding: 10px 10px;
+        a {
+          color: aliceblue;
+          margin: 0 8px;
+          letter-spacing: 2px;
+          font-size: 1.3rem;
+          text-align: center;
+        }
+      }
+    }
+  }
+  .foot a:hover {
+    color: rgb(170, 119, 23);
+    transition: 0.3s;
+  }
+}
+// `lg` applies to medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
+}
+// `md` applies to small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
+}
+// `sm` applies to x-small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+  .index-bg {
+    background-image: url(../Image/hero-idx-mobile@2x.png);
+    background-position: 50% 30%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    .index-bg-img {
+      display: none;
+    }
+    .index-btn-group {
+      border: 2px solid black;
+      width: 80px;
+      height: 80px;
+      line-height: 17vw;
+      color: #b18f6e;
+      position: absolute;
+      display: block;
+      border: 1px solid #b18f6e;
+      border-radius: 100px;
+      text-align: center;
+      margin-bottom: 150px;
+      font-size: 20px;
+      font-family: "American Typewriter";
+    }
+  }
+  div.news-card {
+    // border: 2px solid black;
+    margin-top: 20px;
+    width: 70%;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    // margin: 20px 10px;
+    a.bg-item {
+      border: 1px solid rgba(155, 155, 153, 0.555);
+      background-color: rgba(193, 212, 228, 0.349);
+      width: 100%;
+      // margin: 5px;
+      color: rgb(97, 94, 93);
+
+      img {
+        // border: 2px solid red;
+        width: 100%;
+      }
+      p {
+        margin-top: 20px;
+        text-align: center;
+      }
+    }
+  }
+  .about-bg-img {
+    min-height: 20vh;
+  }
+  .about-link-group {
+    // border: 2px solid blue;
+    ul {
+      // border: 2px solid red;
+      width: 80%;
+      margin: 0 auto;
+      li {
+        margin: 10px 5px;
+      }
+      .about-link {
+        font-size: 1rem;
+        padding: 8px 10px;
+      }
+    }
+  }
+  .about-container {
+    // border: 2px solid black;
+    margin: 0 10px;
+    .top-group {
+      // border: 2px solid blue;
+      display: flex;
+      flex-wrap: wrap;
+      .left-img {
+        img {
+          max-width: 100%;
+        }
+      }
+      .right-group {
+        // border: 2px solid red;
+        width: 100%;
+        margin: 10px 0;
+        .right-title {
+          font-size: 2rem;
+          margin: 15px 10px;
+          color: rgb(153, 105, 42);
+        }
+        .right-text {
+          // border: 2px solid seagreen;
+          width: 100%;
+          margin: 0;
+        }
+        img {
+          max-width: 100%;
+          margin: 15px 0px 0 0px;
+        }
+      }
+    }
+    .bottom-group {
+      // border: 2px solid yellow;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      .bottom-text {
+        // border: 2px solid hotpink;
+        width: 100%;
+        margin: 10px 0;
+        text-align: justify;
+        line-height: 1.5;
+        letter-spacing: 1px;
+      }
+    }
+  }
+  .about-map {
+    // border: 2px solid orange;
+    margin-top: 20px;
+    a {
+      display: none;
+    }
+    .ifram {
+      display: block;
+      width: 100%;
     }
   }
   footer.footer {
@@ -543,17 +582,3 @@ footer.footer {
     transition: 0.3s;
   }
 }
-
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) {
-  .about-bg-img {
-    min-height: 20vh;
-  }
-}
-
-// X-Large devices (large desktops, less than 1400px)
-@media (max-width: 1399.98px) {
-}
-
-// XX-Large devices (larger desktops)
-// No media query since the xxl breakpoint has no upper bound on its width
