--- a/style/style.css
+++ b/style/style.css
@@ -95,11 +95,12 @@ body {
 
 #menu li {
   width: 100px;
-  height: 22px;
+  height: 35px;
   line-height: 22px;
   float: left;
   overflow: hidden;
   text-align: center;
+  padding-top: 9.95px;
 }
 
 #menu a {
